Bao's-source-ass3/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'integer'", "'float'", "'string'", 
                     "'void'", "'auto'", "'inherit'", "'out'", "'function'", 
                     "'for'", "'while'", "'do'", "'return'", "'continue'", 
                     "'break'", "'if'", "'else'", "'true'", "'false'", "'array'", 
                     "'of'", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'printFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", "','", 
                     "';'", "':'", "'='", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "INT", "FLOAT", "STRING", "VOID", 
                      "AUTO", "INHERIT", "OUT", "FUNCTION", "FOR", "WHILE", 
                      "DO", "RETURN", "CONTINUE", "BREAK", "IF", "ELSE", 
                      "TRUE", "FALSE", "ARRAY", "OF", "READ_INTEGER", "PRINT_INTEGER", 
                      "READ_FLOAT", "PRINT_FLOAT", "READ_BOOLEAN", "PRINT_BOOLEAN", 
                      "READ_STRING", "PRINT_STRING", "SUPER", "PREVENT_DEFAULT", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "DECIMAL", "REAL", 
                      "BOOLEAN", "STRINGLIT", "IDENTIFIERS", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AND", "OR", "EQ", "NEQ", 
                      "LT", "LTE", "GT", "GTE", "SCOPE", "COMMA", "SEMI", 
                      "COLON", "ASSIGN", "DOT", "LP", "RP", "LB", "RB", 
                      "LBK", "RBK", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_bool_typ = 3
    RULE_int_typ = 4
    RULE_float_typ = 5
    RULE_string_typ = 6
    RULE_void_typ = 7
    RULE_auto_typ = 8
    RULE_array_typ = 9
    RULE_int_lit = 10
    RULE_typ_of_array = 11
    RULE_declare_var = 12
    RULE_init_var = 13
    RULE_recursive_var = 14
    RULE_idlit = 15
    RULE_typ_var = 16
    RULE_declare_para = 17
    RULE_inherit = 18
    RULE_out = 19
    RULE_declare_func = 20
    RULE_typ = 21
    RULE_paralit = 22
    RULE_paraPrime = 23
    RULE_body = 24
    RULE_block_stm = 25
    RULE_block_lit = 26
    RULE_stmt = 27
    RULE_exp = 28
    RULE_exp1 = 29
    RULE_exp2 = 30
    RULE_exp3 = 31
    RULE_exp4 = 32
    RULE_exp5 = 33
    RULE_exp6 = 34
    RULE_exp7 = 35
    RULE_exp8 = 36
    RULE_list_exp = 37
    RULE_fun_call = 38
    RULE_para_fun = 39
    RULE_para_fun_Prime = 40
    RULE_ass_stm = 41
    RULE_if_stm = 42
    RULE_for_stm = 43
    RULE_init_exp = 44
    RULE_while_stm = 45
    RULE_do_wh_stm = 46
    RULE_break_stm = 47
    RULE_continue_stm = 48
    RULE_return_stm = 49
    RULE_call_stm = 50
    RULE_special_function = 51
    RULE_readInteger = 52
    RULE_printInteger = 53
    RULE_readFloat = 54
    RULE_printFloat = 55
    RULE_readBoolean = 56
    RULE_printBoolean = 57
    RULE_readString = 58
    RULE_printString = 59
    RULE_suPer = 60
    RULE_preventDefault = 61
    RULE_array = 62
    RULE_element_array = 63

    ruleNames =  [ "program", "decllist", "decl", "bool_typ", "int_typ", 
                   "float_typ", "string_typ", "void_typ", "auto_typ", "array_typ", 
                   "int_lit", "typ_of_array", "declare_var", "init_var", 
                   "recursive_var", "idlit", "typ_var", "declare_para", 
                   "inherit", "out", "declare_func", "typ", "paralit", "paraPrime", 
                   "body", "block_stm", "block_lit", "stmt", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", 
                   "list_exp", "fun_call", "para_fun", "para_fun_Prime", 
                   "ass_stm", "if_stm", "for_stm", "init_exp", "while_stm", 
                   "do_wh_stm", "break_stm", "continue_stm", "return_stm", 
                   "call_stm", "special_function", "readInteger", "printInteger", 
                   "readFloat", "printFloat", "readBoolean", "printBoolean", 
                   "readString", "printString", "suPer", "preventDefault", 
                   "array", "element_array" ]

    EOF = Token.EOF
    BOOL=1
    INT=2
    FLOAT=3
    STRING=4
    VOID=5
    AUTO=6
    INHERIT=7
    OUT=8
    FUNCTION=9
    FOR=10
    WHILE=11
    DO=12
    RETURN=13
    CONTINUE=14
    BREAK=15
    IF=16
    ELSE=17
    TRUE=18
    FALSE=19
    ARRAY=20
    OF=21
    READ_INTEGER=22
    PRINT_INTEGER=23
    READ_FLOAT=24
    PRINT_FLOAT=25
    READ_BOOLEAN=26
    PRINT_BOOLEAN=27
    READ_STRING=28
    PRINT_STRING=29
    SUPER=30
    PREVENT_DEFAULT=31
    LINE_COMMENT=32
    BLOCK_COMMENT=33
    DECIMAL=34
    REAL=35
    BOOLEAN=36
    STRINGLIT=37
    IDENTIFIERS=38
    ADD=39
    SUB=40
    MUL=41
    DIV=42
    MOD=43
    NOT=44
    AND=45
    OR=46
    EQ=47
    NEQ=48
    LT=49
    LTE=50
    GT=51
    GTE=52
    SCOPE=53
    COMMA=54
    SEMI=55
    COLON=56
    ASSIGN=57
    DOT=58
    LP=59
    RP=60
    LB=61
    RB=62
    LBK=63
    RBK=64
    WS=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None







    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.decllist()
            self.state = 129
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.decl()
                self.state = 132
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_var(self):
            return self.getTypedRuleContext(MT22Parser.Declare_varContext,0)


        def declare_func(self):
            return self.getTypedRuleContext(MT22Parser.Declare_funcContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 137
                self.declare_var()
                pass

            elif la_ == 2:
                self.state = 138
                self.declare_func()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_bool_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_typ" ):
                return visitor.visitBool_typ(self)
            else:
                return visitor.visitChildren(self)




    def bool_typ(self):

        localctx = MT22Parser.Bool_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bool_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MT22Parser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_int_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_typ" ):
                return visitor.visitInt_typ(self)
            else:
                return visitor.visitChildren(self)




    def int_typ(self):

        localctx = MT22Parser.Int_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_int_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(MT22Parser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Float_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_float_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat_typ" ):
                return visitor.visitFloat_typ(self)
            else:
                return visitor.visitChildren(self)




    def float_typ(self):

        localctx = MT22Parser.Float_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_float_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MT22Parser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_string_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString_typ" ):
                return visitor.visitString_typ(self)
            else:
                return visitor.visitChildren(self)




    def string_typ(self):

        localctx = MT22Parser.String_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_string_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(MT22Parser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Void_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_void_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVoid_typ" ):
                return visitor.visitVoid_typ(self)
            else:
                return visitor.visitChildren(self)




    def void_typ(self):

        localctx = MT22Parser.Void_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_void_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MT22Parser.VOID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Auto_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_auto_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAuto_typ" ):
                return visitor.visitAuto_typ(self)
            else:
                return visitor.visitChildren(self)




    def auto_typ(self):

        localctx = MT22Parser.Auto_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_auto_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MT22Parser.AUTO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LBK(self):
            return self.getToken(MT22Parser.LBK, 0)

        def int_lit(self):
            return self.getTypedRuleContext(MT22Parser.Int_litContext,0)


        def RBK(self):
            return self.getToken(MT22Parser.RBK, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def typ_of_array(self):
            return self.getTypedRuleContext(MT22Parser.Typ_of_arrayContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_typ" ):
                return visitor.visitArray_typ(self)
            else:
                return visitor.visitChildren(self)




    def array_typ(self):

        localctx = MT22Parser.Array_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MT22Parser.ARRAY)
            self.state = 154
            self.match(MT22Parser.LBK)
            self.state = 155
            self.int_lit()
            self.state = 156
            self.match(MT22Parser.RBK)
            self.state = 157
            self.match(MT22Parser.OF)
            self.state = 158
            self.typ_of_array()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL(self):
            return self.getToken(MT22Parser.DECIMAL, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def int_lit(self):
            return self.getTypedRuleContext(MT22Parser.Int_litContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_int_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_lit" ):
                return visitor.visitInt_lit(self)
            else:
                return visitor.visitChildren(self)




    def int_lit(self):

        localctx = MT22Parser.Int_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_int_lit)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(MT22Parser.DECIMAL)
                self.state = 161
                self.match(MT22Parser.COMMA)
                self.state = 162
                self.int_lit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(MT22Parser.DECIMAL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typ_of_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_typ(self):
            return self.getTypedRuleContext(MT22Parser.Bool_typContext,0)


        def int_typ(self):
            return self.getTypedRuleContext(MT22Parser.Int_typContext,0)


        def float_typ(self):
            return self.getTypedRuleContext(MT22Parser.Float_typContext,0)


        def string_typ(self):
            return self.getTypedRuleContext(MT22Parser.String_typContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_typ_of_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp_of_array" ):
                return visitor.visitTyp_of_array(self)
            else:
                return visitor.visitChildren(self)




    def typ_of_array(self):

        localctx = MT22Parser.Typ_of_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_typ_of_array)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.bool_typ()
                pass
            elif token in [MT22Parser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.int_typ()
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.float_typ()
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.string_typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlit(self):
            return self.getTypedRuleContext(MT22Parser.IdlitContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def typ_var(self):
            return self.getTypedRuleContext(MT22Parser.Typ_varContext,0)


        def array_typ(self):
            return self.getTypedRuleContext(MT22Parser.Array_typContext,0)


        def IDENTIFIERS(self):
            return self.getToken(MT22Parser.IDENTIFIERS, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def init_var(self):
            return self.getTypedRuleContext(MT22Parser.Init_varContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_var" ):
                return visitor.visitDeclare_var(self)
            else:
                return visitor.visitChildren(self)




    def declare_var(self):

        localctx = MT22Parser.Declare_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_declare_var)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.idlit()
                self.state = 173
                self.match(MT22Parser.COLON)
                self.state = 176
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.BOOL, MT22Parser.INT, MT22Parser.FLOAT, MT22Parser.STRING, MT22Parser.AUTO]:
                    self.state = 174
                    self.typ_var()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 175
                    self.array_typ()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 178
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.match(MT22Parser.IDENTIFIERS)
                self.state = 181
                self.match(MT22Parser.COLON)
                self.state = 184
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.BOOL, MT22Parser.INT, MT22Parser.FLOAT, MT22Parser.STRING, MT22Parser.AUTO]:
                    self.state = 182
                    self.typ_var()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 183
                    self.array_typ()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 186
                self.match(MT22Parser.ASSIGN)
                self.state = 187
                self.exp()
                self.state = 188
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 190
                self.init_var()
                pass

